Description
Themed scrollbars are not correctly painted for console windows, especially the vertical scrollbar (the horizontal scrollbar also has a painting bug, on the right of it).
See screenshot ReactOS_r74165.png
and video ReactOS_r74165.webm
for the problems.
Attachments
Issue Links
- blocks
-
CORE-12285 Reactos Theming Issues [Themes / Theme-ing / Themeing]
-
- Untriaged
-