[UXTHEME] -Fix drawing the themed scrollbar. CORE-12933

svn path=/trunk/; revision=74234